--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 # Binaries for programs and plugins
+*.dll
+*.dylib
 *.exe
 *.exe~
-*.dll
+*.out
 *.so
-*.dylib
-
+# Output of the go coverage tool, specifically when used with LiteIDE
 # Test binary, build with `go test -c`
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
+# Ignore dist
+dist/
 # Ignore our executables
 oc-client
 oc-daemon
