Add Ping() method to D-Bus policy
Signed-off-by: hwipl <33433250+hwipl@users.noreply.github.com>

--- a/configs/dbus/com.telekom_mms.oc_daemon.Daemon.conf
+++ b/configs/dbus/com.telekom_mms.oc_daemon.Daemon.conf
@@ -24,6 +24,10 @@
                 <deny send_destination="com.telekom_mms.oc_daemon.Daemon"/>
 
                 <allow send_destination="com.telekom_mms.oc_daemon.Daemon"
+                       send_interface="org.freedesktop.DBus.Peer"
+                       send_member="Ping"/>
+
+                <allow send_destination="com.telekom_mms.oc_daemon.Daemon"
                        send_interface="org.freedesktop.DBus.Introspectable"/>
 
                 <allow send_destination="com.telekom_mms.oc_daemon.Daemon"
