--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -55,6 +55,7 @@ archives:
         dst: dbus/com.telekom_mms.oc_daemon.Daemon.conf
         info:
           mode: 0644
+      - docs
       - README.md
       - LICENSE
 checksum:
@@ -119,6 +120,18 @@ nfpms:
         file_info:
           mode: 0644
       - src: copyright
+        dst: /usr/share/doc/oc-daemon/
+        file_info:
+          mode: 0644
+      - src: docs
+        dst: /usr/share/doc/oc-daemon/docs
+        file_info:
+          mode: 0755
+      - src: README.md
+        dst: /usr/share/doc/oc-daemon/
+        file_info:
+          mode: 0644
+      - src: LICENSE
         dst: /usr/share/doc/oc-daemon/
         file_info:
           mode: 0644
