Add method "DumpState" to D-Bus API
Add the method "DumpState" to the D-Bus API that returns the internal
state of the OC-Daemon as a JSON string for debugging.

Signed-off-by: hwipl <33433250+hwipl@users.noreply.github.com>

--- a/configs/dbus/com.telekom_mms.oc_daemon.Daemon.conf
+++ b/configs/dbus/com.telekom_mms.oc_daemon.Daemon.conf
@@ -18,6 +18,10 @@
                 <allow send_destination="com.telekom_mms.oc_daemon.Daemon"
                        send_interface="com.telekom_mms.oc_daemon.Daemon"
                        send_member="Disconnect"/>
+
+                <allow send_destination="com.telekom_mms.oc_daemon.Daemon"
+                       send_interface="com.telekom_mms.oc_daemon.Daemon"
+                       send_member="DumpState"/>
 	</policy>
 
         <policy context="default">
