Configure systemd-resolved in ocserv tests
Configure systemd-resolved in the oc-daemon container before running
each of the ocserv tests.

Signed-off-by: hwipl <33433250+hwipl@users.noreply.github.com>

--- a/test/ocserv/podman/compose-ipv6.yml
+++ b/test/ocserv/podman/compose-ipv6.yml
@@ -30,6 +30,7 @@ services:
       - "/dev/net/tun:/dev/net/tun"
     networks:
       - ext
+    dns: none
     container_name: oc-daemon-test-oc-daemon
     environment:
       - GOCOVERDIR=/gocover
