Update golangci-lint and GitHub action
- Update GitHub action golangci/golangci-lint-action to v8
- Update golangci-lint configuration to version 2 with
  "golangci-lint migrate" because only v2 is supported
- Remove option "skip-pkg-cache" that was removed in action v5

Signed-off-by: hwipl <33433250+hwipl@users.noreply.github.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,25 @@
-# For documentation, see https://golangci-lint.run/usage/configuration/
-run:
-  timeout: 60m
+version: "2"
 linters:
   enable:
     - unconvert
     - unparam
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
     - gofmt
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
